WOW flicker fix

--- a/src/assets/css/partials/_site.scss
+++ b/src/assets/css/partials/_site.scss
@@ -116,3 +116,7 @@ b, strong {
 .heavy {
     font-weight: 700;
 }
+
+.wow {
+    visibility: hidden;
+}
